unpackaged/objects/Alt_ETM2__mdt.object
<CustomObject>
  <fields>
    <fullName>ETM2_State_City__c</fullName>
    <label>ETM2 State&amp;City</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ETM2_Zip_Code__c</fullName>
    <label>ETM2 Zip Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sales_Rep_Name__c</fullName>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>Alt ETM2</label>
  <pluralLabel>Alt ETM2s</pluralLabel>
</CustomObject>